--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row">
               <div class="col-12">
                 <label class="label">Enter number 1-9 [Without validation]<br/>
-                      <input class="get-val" type="number" placeholder='Enter id'/>
+                      <input class="get-val" type="number" placeholder='Enter id'z/>
                     </label><br/>
                 <input class="input-get" type="submit" value="Get id">
               </div>
