--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <div class="col-md-6 mb-5">
             <div class="row">
               <div class="col-12">
-                <label class="label">Enter number 1-9 [Without validation]<br/>
-                      <input class="get-val" type="number" placeholder='Enter id'z/>
+                <label class="label">Enter number 1-9<br/>
+                      <input class="get-val" type="number" placeholder='Enter id' pattern="[1-9]{1}"/>
                     </label><br/>
                 <input class="input-get" type="submit" value="Get id">
               </div>
