--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row">
               <div class="col-12">
                 <label class="label">Enter number 1-9<br/>
-                      <input class="get-val" type="number" placeholder='Enter id' pattern="[1-9]{1}"/>
+                      <input class="get-val" type="number" placeholder='Enter id' pattern="[0-9]{1}" required/>
                     </label><br/>
                 <input class="input-get" type="submit" value="Get id">
               </div>
